# mimic-bench

./: .gitignore  README.md  dataset.toml  pyproject.toml
datasets/chart-rendering/: dataset.toml
datasets/proposed-functions/: README.md  dataset.toml
scripts/: generate_chart_tasks.py  generate_function_tasks.py  generate_proposed_function_tasks.py  sync_shared.py
source-corpus/: README.md
source-corpus/function-test-args-literalized-augmented-v3/: ACCRINT.jsonl  ACCRINTM.jsonl  AGGREGATE.jsonl  AMORDEGRC.jsonl  AMORLINC.jsonl  AVERAGEIF.jsonl  AVERAGEIFS.jsonl  BESSELJ.jsonl  BESSELK.jsonl  BETA.DIST.jsonl  BETA.INV.jsonl  CHISQ.DIST.jsonl  CHISQ.INV.RT.jsonl  CHISQ.INV.jsonl  CHISQ.TEST.jsonl  CONFIDENCE.NORM.jsonl  CONFIDENCE.T.jsonl  CONVERT.jsonl  COUNTIF.jsonl  COUNTIFS.jsonl  COUPDAYBS.jsonl  COUPDAYS.jsonl  COUPDAYSNC.jsonl  COUPNCD.jsonl  COUPNUM.jsonl  COUPPCD.jsonl  DISC.jsonl  DURATION.jsonl  ERF.PRECISE.jsonl  ERF.jsonl  ERFC.PRECISE.jsonl  F.DIST.RT.jsonl  F.DIST.jsonl  F.INV.RT.jsonl  F.INV.jsonl  F.TEST.jsonl  FVSCHEDULE.jsonl  GAMMA.DIST.jsonl  GAMMA.INV.jsonl  GAUSS.jsonl  (+67 more)
source-corpus/proposed-function-formula-simulations/: combined-proposed-function-formula-simulations.md
tasks/chart-area/: instruction.md  task.toml
tasks/chart-bar/: instruction.md  task.toml
tasks/chart-box-whisker/: instruction.md  task.toml
tasks/chart-bubble/: instruction.md  task.toml
tasks/chart-column/: instruction.md  task.toml
tasks/chart-doughnut/: instruction.md  task.toml
template-chart-task/: README.md
template-task/: README.md
(+761 files in other folders)
