[project]
name = "mimic-bench"
version = "0.1.0"
description = "Oracle-backed coding-agent benchmark for underspecified programming tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "harbor==0.13.2",
  "numpy>=2.0",
  "pillow>=11.0",
  "scipy>=1.14",
  "witan==0.13.0",
]

[tool.uv]
package = false
